# novel-agent

./: .gitignore  MVP.md  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  crud.py  database.py  logging_config.py  main.py  models.py  schemas.py
backend/app/agent/: __init__.py  graph.py  llm.py  nodes.py  prompts.py  state.py
backend/app/api/: agent.py  chapters.py  characters.py  foreshadowing.py  outlines.py  projects.py  worldbuilding.py
backend/app/rag/: __init__.py  indexer.py  retriever.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  global.d.ts  main.ts  style.css
frontend/src/api/: agent.ts  client.ts  projects.ts
frontend/src/components/: AgentPanel.vue  ChapterEditor.vue  CharacterEditor.vue  ConsistencyReport.vue  ForeshadowingEditor.vue  OutlineEditor.vue  ProjectForm.vue  QuestionCard.vue  WorldSettingEditor.vue
frontend/src/router/: index.ts
frontend/src/stores/: projectStore.ts
frontend/src/views/: ChapterWorkspaceView.vue  ProjectDetailView.vue  ProjectListView.vue
