[project]
name = "backend"
version = "0.1.0"
description = "Novel Agent MVP backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "langgraph>=1.1.10",
    "llama-index>=0.14.21",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
